# mplayer

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
.github/workflows/: pipeline.yml
locales/: mplayer_be.ts  mplayer_en.ts  mplayer_ru.ts
qml/android/: AndroidMainPage.qml  NavigationDrawer.qml
qml/ios/: IosMainPage.qml  NowPlayingView.qml
qml/linux/: LinuxMainPage.qml  MenuBar.qml
qml/shared/: AlbumCover.qml  ErrorDialog.qml  PlayerControls.qml  PlaylistView.qml  TrackDelegate.qml
src/: appcontroller.cpp  appcontroller.h  audioengine.cpp  audioengine.h  databasemanager.cpp  databasemanager.h  filebrowser.cpp  filebrowser.h  playlistmanager.cpp  playlistmanager.h
tests/: CMakeLists.txt  tst_audioengine.cpp  tst_database.cpp  tst_filebrowser.cpp  tst_integration.cpp  tst_playlistmanager.cpp  tst_qml_controls.cpp  tst_qml_controls.qml  tst_qml_delegate.cpp  tst_qml_delegate.qml  tst_qml_playlist.cpp  tst_qml_playlist.qml
